# VIO_Hw

./: .gitignore  .gitmodules  README.md
ch1/: CMakeLists.txt  ch1.kdev4  check_quaterniond_so3_update.cpp
ch1/.kdev4/: ch1.kdev4
ch10/Project BASolver/: README.md  手写 rootBA 求解器.md
ch10/Project BASolver/rootBA/: CMakeLists.txt
ch10/Project BASolver/rootBA/cmake_modules/: FindTBB.cmake
ch10/Project BASolver/rootBA/include/: camera_observe.hpp  ceres_basolver.hpp  frame.hpp  kernel_function.hpp  landmark_block.hpp  problem_vo.hpp  timer.hpp  utility.hpp  vertex.hpp
ch10/Project BASolver/rootBA/src/: benchmark_rootba.cpp  test_rootba.cpp
ch2/course2_hw_new/vio_data_simulation/python_tool/: draw_points.py  draw_trajcory.py
ch2/course2_hw_new/vio_data_simulation/src/: imu.cpp
ch2/course2_hw_new/vio_sim_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ch2/course2_hw_new/vio_sim_ws/src/: calcBiasNoise.py
ch3/: draw_damp.py
ch3/CurveFitting_LM/app/: CurveFitting.cpp
ch3/CurveFitting_LM/backend/: problem.cc  problem.h
ch4/nullspace_test/: hessian_nullspace_test.cpp
ch5/hw_course5_new/app/: TestMonoBA.cpp
ch5/hw_course5_new/backend/: problem.cc
ch7/course7_hw/: CMakeLists.txt
ch7/course7_hw/config/: simluation_config.yaml
ch7/course7_hw/include/: System.h
ch7/course7_hw/src/: System.cpp
ch7/course7_hw/test/: run_euroc.cpp  run_simulation.cpp
old_folder/ch1/: updateRotate.cpp
old_folder/vioWork/first_update/: CMakeLists.txt  compare_update.cpp
vioWork/first_update/: compare_update.cpp
(+6 files in other folders)
